[gd_scene load_steps=4 format=3 uid="uid://cd7vgs0dhux2k"]

[ext_resource type="Script" uid="uid://g0r0ngysvy7u" path="res://scenes/level.gd" id="1_2q6dc"]

[sub_resource type="Curve2D" id="Curve2D_rd3vj"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, -58, 310, 0, 0, 0, 0, 81, 310, 0, 0, 0, 0, 83, 428, 0, 0, 0, 0, 26, 432, 0, 0, 0, 0, 38, 606, 0, 0, 0, 0, 210, 619, 0, 0, 0, 0, 214, 438, 0, 0, 0, 0, 125, 431, 0, 0, 0, 0, 137, 266, 0, 0, 0, 0, 63, 261, 0, 0, 0, 0, 57, 76, 0, 0, 0, 0, 274, 86, 0, 0, 0, 0, 286, 255, 0, 0, 0, 0, 184, 259, 0, 0, 0, 0, 178, 401, 0, 0, 0, 0, 278, 416, 0, 0, 0, 0, 276, 599, 0, 0, 0, 0, 309, 598, 0, 0, 0, 0, 307, 82, 0, 0, 0, 0, 307, 82, 0, 0, 0, 0, 495, 86, 0, 0, 0, 0, 491, 242, 0, 0, 0, 0, 350, 242, 0, 0, 0, 0, 356, 430, 0, 0, 0, 0, 494, 431, 0, 0, 0, 0, 493, 608, 0, 0, 0, 0, 651, 607, 0, 0, 0, 0, 635, 345, 0, 0, 0, 0, 747, 97, 0, 0, 0, 0, 943, 617, 0, 0, 0, 0, 1058, 94, 0, 0, 0, 0, 1129, 356, 0, 0, 0, 0, 1220, 356)
}
point_count = 33

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2q6dc"]
size = Vector2(20, 86)

[node name="Level" type="Node2D"]
script = ExtResource("1_2q6dc")

[node name="Path2D" type="Path2D" parent="."]
unique_name_in_owner = true
curve = SubResource("Curve2D_rd3vj")

[node name="WaveStartTimer" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="EndPath" type="Area2D" parent="."]
unique_name_in_owner = true
position = Vector2(1162, 355)

[node name="CollisionShape2D" type="CollisionShape2D" parent="EndPath"]
shape = SubResource("RectangleShape2D_2q6dc")

[connection signal="timeout" from="WaveStartTimer" to="." method="_on_wave_start_timer_timeout"]
[connection signal="body_entered" from="EndPath" to="." method="_on_end_path_body_entered"]
